data/logs.old.20260722/futures_backfill_20260715_2005.log
=== futures_backfill.sh 开始 2026-07-15 20:05:05 ===
交易日判断: IS_TRADING=1 FORCE=0
-> 采集期货机构持仓当日 + compute_accuracy ...
  File "<string>", line 18
    print(f'[futures] {date}: collected {combos} variety-role combos ({,
          ^
SyntaxError: unterminated string literal (detected at line 18)
期货无新数据（源未发布或为空），跳过推送
=== futures_backfill.sh 结束 2026-07-15 20:05:06 退出码=0 ===
